# genjets-course

./: .gitignore  CMakeLists.txt  INSTALLATION_TUTORIAL.md  README.md
herwig/: BasicPP.in
include/: BasicHepMCReader.hpp  BasicPythia.hpp
scripts/: basic_hepmc_reader.py  basic_pythia.py
src/: BasicHepMCReader.cpp  BasicPythia.cpp
